# automerge-cpp

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  linux-baseline.json  linux-optimized-native.json  linux-optimized.json
.github/workflows/: build.yml  freebsd.yml  linux.yml  macos.yml  pages.yml  windows.yml
benchmarks/: CMakeLists.txt  placeholder_benchmark.cpp
docs/: Doxyfile  api.md  benchmark-results-linux.md  benchmark-results.md  json-integration.md  style.md
docs/html/: annotated.html  annotated_dup.js  automerge_8hpp.html  automerge_8hpp_source.html  change_8hpp.html  change_8hpp.js  change_8hpp_source.html  classautomerge__cpp_1_1_document-members.html  classautomerge__cpp_1_1_document.html  classautomerge__cpp_1_1_document.js  classautomerge__cpp_1_1_sync_state-members.html  classautomerge__cpp_1_1_sync_state.html  classautomerge__cpp_1_1_sync_state.js  classautomerge__cpp_1_1_transaction-members.html  classautomerge__cpp_1_1_transaction.html  classautomerge__cpp_1_1_transaction.js  classes.html  cursor_8hpp.html  cursor_8hpp.js  cursor_8hpp_source.html  dir_65413a145fed45eea8d9a52f33928749.html  dir_65413a145fed45eea8d9a52f33928749.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  document_8hpp.html  document_8hpp.js  document_8hpp_source.html  doxygen_crawl.html  error_8hpp.html  error_8hpp.js  error_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  index.html  mark_8hpp.html  mark_8hpp.js  mark_8hpp_source.html  (+95 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+47 more)
docs/plans/: architecture.md  initializer-list-api.md  nlohmann-json-interop.md  phase12b-12g-json-interop.md  phase8-10-plan.md  phase9-plan.md  profiling-analysis.md  roadmap.md  serializer-fixes.md  test-coverage-parity.md  v0.4.0-performance.md
examples/: CMakeLists.txt  basic_usage.cpp  collaborative_todo.cpp  json_interop_demo.cpp  parallel_perf_demo.cpp  sync_demo.cpp  text_editor.cpp  thread_safe_demo.cpp
fuzz/: CMakeLists.txt  fuzz_change_chunk.cpp  fuzz_leb128.cpp  fuzz_load.cpp  generate_seeds.cpp
include/automerge-cpp/: automerge.hpp  change.hpp  cursor.hpp  document.hpp  error.hpp  json.hpp  mark.hpp  op.hpp  patch.hpp  sync_state.hpp  thread_pool.hpp  transaction.hpp  types.hpp  value.hpp
src/: doc_state.hpp  document.cpp  executor.hpp  json.cpp  placeholder.cpp  thread_pool.hpp  transaction.cpp
src/crypto/: sha256.hpp
src/encoding/: boolean_encoder.hpp  delta_encoder.hpp  leb128.hpp  rle.hpp
src/storage/: change_chunk.hpp  chunk.hpp  deserializer.hpp  serializer.hpp
src/storage/columns/: change_op_columns.hpp  column_spec.hpp  compression.hpp  raw_column.hpp  value_encoding.hpp
src/sync/: bloom_filter.hpp
tests/: CMakeLists.txt  change_op_columns_test.cpp  change_test.cpp  chunk_test.cpp  column_spec_test.cpp  delta_encoder_test.cpp  document_test.cpp  error_test.cpp  json_test.cpp  leb128_test.cpp  op_test.cpp  placeholder_test.cpp  rle_test.cpp  sha256_test.cpp  types_test.cpp  value_test.cpp
